--- a/interfision/src/main/resources/application.properties
+++ b/interfision/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Datasource configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/renanteste3
+spring.datasource.url=jdbc:mysql://localhost:3306/interfisio5
 spring.datasource.username=root
 spring.datasource.password=root
 
