feat:"adicionando criação manual das tabelas"

--- a/interfision/src/main/resources/application.properties
+++ b/interfision/src/main/resources/application.properties
@@ -1,14 +1,9 @@
 # Datasource configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/interf
+spring.datasource.url=jdbc:mysql://localhost:3306/interf1
 spring.datasource.username=root
 spring.datasource.password=root
 
-# JPA configuration
-spring.jpa.show-sql=true
-
-# Hibernate configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=true
+spring.flyway.locations=classpath:db/migration
 
 # Pagination configuration
 spring.data.web.pageable.one-indexed-parameters=true
